[lworld] Interpreter fails with fatal error: DEBUG MESSAGE: klass not initialized

XMLWordPrintable

      Attached test fails with -Xint:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla2/open/src/hotspot/cpu/x86/macroAssembler_x86.cpp:869), pid=3452862, tid=3452863
      # fatal error: DEBUG MESSAGE: klass not initialized
      #
      # JRE version: Java(TM) SE Runtime Environment (18.0) (fastdebug build 18-internal+0-2021-05-07-0658132.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-internal+0-2021-05-07-0658132.tobias..., interpreted mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x13cfd25] MacroAssembler::debug64(char*, long, long*)+0x45
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P %E" (or dumping to /oracle/valhalla3/open/core.3452862)
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -Xint Test

      Host: prometheus, Intel(R) Core(TM) i7-9850H CPU @ 2.60GHz, 12 cores, 31G, Ubuntu 20.04.3 LTS
      Time: Mon Sep 13 10:59:21 2021 CEST elapsed time: 0.261424 seconds (0d 0h 0m 0s)

      --------------- T H R E A D ---------------

      Current thread (0x00007f76580282e0): JavaThread "main" [_thread_in_Java, id=3452863, stack(0x00007f765e29f000,0x00007f765e3a0000)]

      Stack: [0x00007f765e29f000,0x00007f765e3a0000], sp=0x00007f765e39e820, free space=1022k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13cfd25] MacroAssembler::debug64(char*, long, long*)+0x45
      j Test.test23()Ljava/lang/Object;+3
      j Test.main([Ljava/lang/String;)V+23
      v ~StubRoutines::call_stub
      V [libjvm.so+0xef8713] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x4d3
      V [libjvm.so+0x1032bc5] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*) [clone .constprop.1]+0x375
      V [libjvm.so+0x1036cf5] jni_CallStaticVoidMethod+0x1c5
      C [libjli.so+0x4797] JavaMain+0xd37
      C [libjli.so+0x7aa9] ThreadJavaMain+0x9


      Attached Test2 is similar and fails with

      Exception in thread "main" java.lang.RuntimeException: Should have thrown NoClassDefFoundError, iteration: 1
      at Test2.main(Test2.java:35)

      I.e. the interpreter throws a NoClassDefFoundError during the first iteration but not any more for subsequent iterations. I'm wondering if that is expected behavior.

        1. Test2.java
          1 kB
          Tobias Hartmann
        2. Test.java
          1 kB
          Tobias Hartmann

            Assignee:
            Frederic Parain
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: