8273650: [lworld] Interpreter fails with fatal error: DEBUG MESSAGE: klass not initialized

Reviewed-by: dsimms, thartmann