src/hotspot/share/interpreter/interpreterRuntime.cpp
@@ -264,7 +264,7 @@ JRT_ENTRY(void, InterpreterRuntime::defaultvalue(JavaThread* current, ConstantPo
   assert(k->is_inline_klass(), "defaultvalue argument must be the inline type class");
   InlineKlass* vklass = InlineKlass::cast(k);
 
-  vklass->initialize(THREAD);
+  vklass->initialize(CHECK);
   oop res = vklass->default_value();
   current->set_vm_result(res);
 JRT_END
